see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

27-Nov-2010 Mark Dexter
# Improved test coverage for JUserTest

17-Nov-2010 Mark Dexter
# Fix doInstall to allow selection of different database types
^ Added two methods to JFolderTest (Christophe Demoko) as part of [#22484]

15-Nov-2010 Mark Dexter
# Fix failing system test for sample data changes

05-Nov-2010 Mark Dexter
# Fix failing system tests for ACL language changes
# Unit test for [#22444] JRegistry fails when binding an object which contains a JRegistry object

01-Nov-2010 Mark Dexter
# Fix doInstall so it can be run against a different Joomla! instance
# Small fix for featured0001Test due to default ordering in Featured Articles Manager

30-Oct-2010 Mark Dexter
# Remove tests/system/server/configdef.php file accidentally added to version control

29-Oct-2010 Mark Dexter
# Fix problem in controlpanel004Test for small change in category ui

28-Oct-2010 Mark Dexter
# Fix bugs in menu0001Test from new template position modal

22-Oct-2010 Mark Dexter
# Fix bug in JAccessTest and JAccess class when invalid group id is checked
+ Add unit tests for JSession

14-Oct-2010 Mark Dexter
+ article0003Test added to test effect of up-path category state on article menu items
# fix bug in controlpanel0004Test

12-Oct-2010 Mark Dexter
# Fix multiple system tests for ACL UI changes
# Fix problem in language0001test.php from Category Manager UI change

10-Oct-2010 Mark Dexter
^ Added option in configdef.php and doInstall.php to install without sample data

09-Oct-2010 Mark Dexter
^ Changed JAccessTest to provide 100% code coverage

08-Oct-2010 Mark Dexter